# gwatch

./: .clang-format  .gitignore  CMakeLists.txt  README.md  autotest.sh  main.cpp
dbg/: CMakeLists.txt
dbg/include/: Debugger.hpp  Util.hpp  Variable.hpp
dbg/src/: Debugger.cpp  Util.cpp  Util.hpp  Variable.cpp
tests/: CMakeLists.txt  DebuggerTests.cpp  PerfTests.cpp
tests/dummy/: arg_printer.cpp  cli_example.cpp  factorial.cpp  hello_world.cpp  one_read.cpp  one_read_long.cpp  one_read_short.cpp  one_write.cpp  raw.cpp  real.cpp  thread_indirect.cpp  thread_multi.cpp  thread_read.cpp  thread_write.cpp
